# Joule

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  index.html
.github/workflows/: ci.yml
site/: index.html
src/: cache.rs  carbon.rs  cli.rs  config.rs  error.rs  main.rs  metrics.rs  resilience.rs  semantic.rs  store.rs  tokens.rs
src/estimator/: mod.rs  models.rs
src/optimizer/: mod.rs  passes.rs
src/provider/: anthropic.rs  gemini.rs  mod.rs  openai.rs  registry.rs
src/proxy/: mod.rs  openai.rs
src/router/: mod.rs
