[package]
name = "joule"
version = "0.1.0"
edition = "2021"
description = "Energy-aware optimization middleware for LLM inference."
license = "MIT"
readme = "README.md"

[[bin]]
name = "joule"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"
anyhow = "1"
time = { version = "0.3", features = ["formatting"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
